refactor: apidoc的鉴权处理 Closes ${branchName}